# Musicalendar

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: feature.md
back_end/: .gitignore  Cargo.toml  settings.example.toml
back_end/scripts/: playlist_data  spotify-access
back_end/src/: api_key.rs  main.rs  services.rs
back_end/src/domain/: api_key.rs  calendar.rs  link_to_id.rs  mod.rs  musicalendar_error.rs  playlist_id.rs  song.rs
back_end/src/routes/: get_calendar.rs  mod.rs  playlist_link.rs
back_end/src/startup/: app.rs  mod.rs  settings.rs
back_end/tests/: integration_tests.rs
front_end/: index.html
front_end/src/: App.svelte
front_end/src/components/: ActionButtons.svelte
front_end/src/components/welcomepage/: ActionButtons.svelte  MoreInfo.svelte
front_end/src/js/: fetch.js
front_end/src/pages/: Calendar.svelte  WelcomePage.svelte
frontend/: Cargo.toml  index.html  package-lock.json
frontend/public/: index.scss
frontend/src/: main.rs
frontend/src/routes/: homepage.svelte
