[package]
name = "musicalendar"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/paul-ohl/Musicalendar"
keywords = []
license = ""
categories = []
description = ""
readme = "README.md"

[dependencies]
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.75"
